# xe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  update_shaders.bat  xetrace.json
editor/: CMakeLists.txt
editor/assets/shaders/: common.frag  fb_test.frag  fb_test.vert  test.frag  test.vert
editor/src/: free_camera.cpp  free_camera.hpp  main.cpp  test_layer.cpp  test_layer.hpp
editor/src/layers/: layer_base.hpp  model_layer.cpp  model_layer.hpp  renderer2d_layer.cpp  renderer2d_layer.hpp  test_layer.cpp  test_layer.hpp  test_overlay.cpp  test_overlay.hpp  text_layer.cpp  text_layer.hpp
engine/: CMakeLists.txt
engine/cmake/: ShaderPacker.cmake  msvc_pch.cmake  shader_packer.cmake
engine/include/xe/: array.hpp  assert.hpp  common.hpp  font.hpp  memory.hpp  params.hpp  reference_counter.hpp  scoped_array.hpp  string.hpp  unordered_map.hpp  vector.hpp  xe.hpp  xeint.hpp
engine/include/xe/components/: transform.hpp
engine/include/xe/core/: application.hpp  assets.hpp  component.hpp  delegate.hpp  engine.hpp  event.hpp  filesystem.hpp  game_object.hpp  gpu.hpp  input.hpp  layer.hpp  layer_base.hpp  layer_stack.hpp  module.hpp  object.hpp  scene.hpp  sleep.hpp  timer.hpp  timestep.hpp  vfs.hpp
engine/include/xe/graphics/: camera.hpp  color.hpp  composer.hpp  display_list.hpp  draw_list.hpp  gpu_instances.hpp  gpu_resource.hpp  gpu_resources.hpp  material.hpp  mesh.hpp  model.hpp  render_context.hpp  renderer2d.hpp  text.hpp  text_renderer.hpp  texture.hpp  types.hpp  window.hpp
engine/include/xe/input/: keyboard.hpp  mouse.hpp
engine/include/xe/math/: mat4.hpp  math.hpp  mathfunc.hpp  platformvecmath.hpp  quat.hpp  rect.hpp  ssevecmath.hpp  transform.hpp  vec2.hpp  vec2.inl  vec3.hpp  vec4.hpp  vecmath.hpp
engine/include/xe/serialization/: file.hpp  json.hpp  node.hpp  node.inl  node_const_view.hpp  node_const_view.inl  node_view.hpp  node_view.inl
engine/include/xe/ui/: ui.hpp
engine/include/xe/ui/imgui/: imconfig.h
engine/include/xe/utils/: base64.hpp  debug_trace.hpp  logger.hpp  noncopyable.hpp
engine/src/: common.cpp  font.cpp  global_config.hpp  string.cpp  xepch.hpp
engine/src/components/: transform.cpp
engine/src/core/: application.cpp  assets.cpp  component.cpp  engine.cpp  event.hpp  filesystem.cpp  game_object.cpp  gpu.cpp  layer_stack.cpp  layer_stack.hpp  object.cpp  scene.cpp  vfs.cpp
engine/src/core/win32/: win32_filesystem.cpp  win32_sleep.cpp  win32filesystem.cpp  win32sleep.cpp  win32timer.cpp
engine/src/embedded/: embedded.cpp  embedded.hpp
engine/src/events/: event.hpp
engine/src/graphics/: camera.cpp  color.cpp  composer.cpp  display_list.cpp  display_list_command.cpp  display_list_command.hpp  draw_list.cpp  draw_list_command.cpp  draw_list_command.hpp  gpu_resources.cpp  material.cpp  mesh.cpp  model.cpp  render_context.cpp  renderer2d.cpp  text.cpp  text_renderer.cpp  texture.cpp  window.cpp
engine/src/graphics/opengl/: gl_backend.cpp  gl_backend.hpp  gl_shader_parser.cpp  gl_shader_parser.hpp  gl_window.cpp  gl_window.hpp  gl_window_data.hpp
engine/src/graphics/opengl/shaders/: camera_ubo.glsl  fb_test.frag  fb_test.vert  final.frag  final.vert  model.frag  model.vert  renderer2d.frag  renderer2d.vert  test.frag  test.vert  text_renderer.frag  text_renderer.vert  ubo_camera3d.glsl  ubo_pbr.glsl  ubo_test_state.glsl  uni_pbr.glsl
engine/src/input/: input.cpp
engine/src/math/: mat4.cpp  quat.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
engine/src/serialization/: file.cpp  json.cpp  node.cpp  node_const_view.cpp  node_view.cpp
engine/src/ui/: xe_imgui.cpp  xe_imgui.hpp
engine/src/ui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
engine/src/ui/opengl/: gl_imgui.cpp  gl_imgui.hpp
engine/src/utils/: assimp_io.cpp  assimp_io.hpp  base64.cpp  debug_trace.cpp  logger.cpp  model_loader.cpp  model_loader.hpp
engine/src/xepch/: xepch.cpp
